--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -38,13 +38,11 @@
                                     <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
-                                <!--<Label Content="{Binding Name}" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-                                -->
-                                <TextBox Text="{Binding Name}" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" VerticalAlignment="center" />
+                                <Label Content="{Binding Name}" Tag="{Binding ID}" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" />
                                 <ui:ToggleSwitch Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" IsOn="{Binding Active}"/>
                                 <Button Content="Edit Macro" Tag="{Binding ID}" Click="EditMacro" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" />
                                 <Button Content="Edit Hotkey" Tag="{Binding ID}" Click="EditHotkey" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" />
-                                
+
                             </Grid>
                         </Border>
                     </DataTemplate>
