--- a/MacroEditorWindow.xaml
+++ b/MacroEditorWindow.xaml
@@ -5,10 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:R3peat"
         mc:Ignorable="d"
-        Title="Macro Editor" Height="450" Width="800" MinWidth="800" MinHeight="450"
+        Title="Macro Editor" Height="450" Width="800" MinWidth="800" MinHeight="485"
         xmlns:ui="http://schemas.modernwpf.com/2019"
         ui:WindowHelper.UseModernWindowStyle="True">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="35"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0">
+            
+        </Grid>
+    <Grid Grid.Row="1">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" MinWidth="265"/>
             <ColumnDefinition Width="2*"/>
@@ -200,5 +208,6 @@
                 </Grid>
             </Grid>
         </Grid>
+    </Grid>
     </Grid>
 </Window>
