--- a/src/Windows/MacroEditorWindow.xaml
+++ b/src/Windows/MacroEditorWindow.xaml
@@ -5,12 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:R3peat"
         mc:Ignorable="d"
-        Title="Macro Editor" Height="450" Width="800" MinWidth="800" MinHeight="485"
+        Title="Macro Editor" Height="625" Width="800" MinWidth="800" MinHeight="485"
         xmlns:ui="http://schemas.modernwpf.com/2019"
         ui:WindowHelper.UseModernWindowStyle="True">
     <Grid x:Name="MacroEditorGrid">
         <Grid.RowDefinitions>
             <RowDefinition Height="35"/>
+            <RowDefinition Height="175"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
@@ -22,7 +23,32 @@
                 <TextBox Name="MacroNameTextBox" TextWrapping="NoWrap" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Grid.ColumnSpan="1" TextChanged="MacroNameChanged" KeyDown="LoseFocusOnEscReturn"/>
                 <Label Content="Macro Name: " HorizontalAlignment="Right" VerticalAlignment="Center"/>
         </Grid>
-    <Grid Grid.Row="1">
+        
+    <Grid Grid.Row="1" KeyDown="Grid_KeyDown" KeyUp="Grid_KeyUp">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <StackPanel Margin="10">
+                <Label Target="{Binding ElementName=ModeComboBox}"  Content="Mode:" />
+                <ComboBox Name="ModeComboBox" Width="120" Height="31"/>
+            </StackPanel>
+        </Grid>
+        <Label Name="HotkeyDisplayLabel" Grid.Row="0" Grid.Column="1" Content="Test" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center" HorizontalContentAlignment="Center"/>
+        <Button Click="ToggleHotkeyUpdate" x:Name="ChangeHotkeyButton" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+    </Grid>
+    <Grid Grid.Row="2">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" MinWidth="265"/>
             <ColumnDefinition Width="2*"/>
