Updated Changing a hotkey

--- a/src/Windows/MacroEditorWindow.xaml
+++ b/src/Windows/MacroEditorWindow.xaml
@@ -45,7 +45,7 @@
                 <ComboBox Name="ModeComboBox" Width="120" Height="31"/>
             </StackPanel>
         </Grid>
-        <Label Name="HotkeyDisplayLabel" Grid.Row="0" Grid.Column="1" Content="Test" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center" HorizontalContentAlignment="Center"/>
+        <Label Name="HotkeyDisplayLabel" Grid.Row="0" Grid.Column="1" Content="filler" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center" HorizontalContentAlignment="Center"/>
         <Button Click="ToggleHotkeyUpdate" x:Name="ChangeHotkeyButton" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
     </Grid>
     <Grid Grid.Row="2">
