--- a/src/Windows/MacroEditorWindow.xaml
+++ b/src/Windows/MacroEditorWindow.xaml
@@ -11,7 +11,7 @@
     <Grid x:Name="MacroEditorGrid">
         <Grid.RowDefinitions>
             <RowDefinition Height="35"/>
-            <RowDefinition Height="175"/>
+            <RowDefinition Height="100"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
@@ -33,18 +33,10 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <StackPanel Margin="10">
-                <Label Target="{Binding ElementName=ModeComboBox}"  Content="Mode:" />
+            <StackPanel Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Margin="10" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+                <Label Target="{Binding ElementName=ModeComboBox}" VerticalAlignment="Center" Content="Mode: " />
                 <ComboBox Name="ModeComboBox" Width="120" Height="31"/>
             </StackPanel>
-        </Grid>
         <Label Name="HotkeyDisplayLabel" Grid.Row="0" Grid.Column="1" Content="filler" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center" HorizontalContentAlignment="Center"/>
         <Button Click="ToggleHotkeyUpdate" x:Name="ChangeHotkeyButton" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
     </Grid>
