--- a/src/Windows/MacroEditorWindow.xaml
+++ b/src/Windows/MacroEditorWindow.xaml
@@ -38,7 +38,7 @@
                 <ComboBox Name="ModeComboBox" Width="120" Height="31"/>
             </StackPanel>
         <Label Name="HotkeyDisplayLabel" Grid.Row="0" Grid.Column="1" Content="filler" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center" HorizontalContentAlignment="Center"/>
-        <Button Click="ToggleHotkeyUpdate" x:Name="ChangeHotkeyButton" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+        <Button PreviewKeyDown="ChangeHotkeyButton_PreviewKeyDown" Click="ToggleHotkeyUpdate" x:Name="ChangeHotkeyButton" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
     </Grid>
     <Grid Grid.Row="2">
         <Grid.ColumnDefinitions>
